# ai_learning

./: .env.example  AGENTS.md  CLAUDE.md  README.md  __init__.py  client.py  pyproject.toml
data/processed/terraform/: ad_impressions.tf  campaign_conversions.tf  campaigns.tf  customers.tf  events.tf  inventory_snapshots.tf  order_items.tf  orders.tf  payments.tf  products.tf  suppliers.tf  users.tf
data/raw/: schema.csv  schema.html  schema.json  schema_multi.csv  schema_multi.html  schema_multi.json
docs/: architecture.md
scripts/: run_agents.py  run_bq_terraform.py
src/ai_agents/: __init__.py  agents.py  base.py  orchestrator.py  vertex_llm_client.py
src/ai_agents/agents/: __init__.py  bq_terraform.py  core.py
src/ai_agents/design_ops/: __init__.py
src/ai_agents/graphs/: __init__.py
src/ai_agents/integrations/: __init__.py
src/ai_agents/integrations/anthropic/: __init__.py
src/ai_agents/integrations/ollama/: __init__.py  client.py
src/ai_agents/integrations/vertex/: __init__.py  client.py
src/ai_agents/prompts/: __init__.py  bq_terraform.py
src/ai_agents/state/: __init__.py  bq.py
src/ai_agents/tools/: __init__.py  file_reader.py
src/ai_agents/workflows/: __init__.py  bq_terraform_workflow.py
src/ai_learning_agents.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_bq_terraform_agent.py  test_orchestrator.py
