[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-learning-agents"
version = "0.1.0"
description = "Starter project for Claude-powered AI agents."
requires-python = ">=3.10"
dependencies = [
  "google-cloud-aiplatform>=1.60.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
